--- a/.travis.yml
+++ b/.travis.yml
@@ -40,7 +40,7 @@ jobs:
       python: "3.6"
       script:
         - python setup.py install
-        - python -c"from addonupdater.packages import get_package"
+        - python -c"from addonupdater.updater import AddonUpdater"
 
     # Deploy to PyPi if all tests pass and change was done on master.
     - stage: deploy
